fixed the algorithm first iteration, didnt work properly when a school only had 1 goal